<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Budget</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="menu">Menu</string>
    <string name="drawer">Drawer</string>
    <string name="main">Main</string>
    <string name="itemactivity_prompt">Click to enter ItemActivity</string>
    <string name="settings_alt">Settings Button</string>
    <string name="settings_text">Settings</string>
    <string name="title_activity_budget_dialog">BudgetDialogActivity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_item_history">ItemHistoryActivity</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_adjust_budget">AdjustBudgetActivity</string>
    <string name="title_activity_adjust_item">AdjustItemActivity</string>
    <string name="title_activity_adjust_expense">AdjustExpenseActivity</string>
    <string name="item_name">Item Name</string>
    <string name="amount_budgeted">Amount Budgeted</string>
    <string name="add_item">Add item</string>
    <string name="amount_prompt">New Amount</string>
    <string name="submit_text">Submit Budget</string>
    <string name="name_text">New Name</string>
    <string name="apply_text">Apply Changes</string>
    <string name="delete_expense_text">Delete Expense</string>
    <string name="delete_item_text">Delete Item</string>
    <string name="desc_text">Description</string>
    <string name="amount_text">Amount</string>
    <string name="add_expense_text">Add Expense</string>
    <string name="add_new_expense_text">Add new expense</string>
    <string name="overview_text">Overview</string>
    <string name="history_text">History</string>
    <string name="no_history_text">No history available for that item.</string>
    <string name="new_item_hint">Add new line item</string>
    <string name="adjust_budget_hint">Adjust your budget</string>
    <string name="item_text">Items</string>
    <string name="no_items_text">No items to show right now.\nClick here to add a line item</string>
    <string name="clear_budget_text">Clear Budget</string>
    <string name="budget_limit_hint">Budget Limit</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_goal_hint">Add new savings goal</string>
    <string name="no_goals_text">No savings goals to show.\nClick here to add a new goal</string>
    <string name="view_budget_hint">View Budget</string>
    <string name="goals_text">View Goals</string>
    <string name="title_activity_add_goal">AddGoalActivity</string>
    <string name="goal_name_text">Goal Name</string>
    <string name="goal_amount_text">Goal Amount</string>
    <string name="add_goal_text">Add goal</string>
    <string name="title_activity_goal_history">GoalHistoryActivity</string>
    <string name="make_deposit_text">Make a new deposit</string>
    <string name="deposit_history_text">Deposit History</string>
    <string name="no_deposits_text">No deposit history to show</string>
    <string name="make_deposit_hint">Make a new savings goal deposit</string>
    <string name="title_activity_make_deposit">MakeDepositActivity</string>
    <string name="deposit_button_text">Make Deposit</string>
    <string name="clear_goals_text">Clear Goals</string>
    <string name="delete_goals_text">Delete All Goals</string>
    <string name="starting_deposit_text">Starting Deposit (Optional)</string>
    <string name="title_activity_adjust_goal">AdjustGoalActivity</string>
    <string name="delete_goal_text">Delete Goal</string>
    <string name="adjust_goal_hint">Adjust Goal</string>
    <string name="title_activity_adjust_deposit">AdjustDepositActivity</string>
    <string name="delete_deposit_text">Delete Deposit</string>
    <string name="add_item_text">Add new item</string>
    <string name="add_new_goal_text">Add new goal</string>

</resources>
