<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark">

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/ic_add"
                android:contentDescription="Add new line item"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:onClick="addLineItem"/>

        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Overview"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#DADADA" />

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/budget_card"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/budgeted"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                />

                <TextView
                    android:id="@+id/spent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/darkred"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                 />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center"
                    android:background="#DADADA"
                />

                <TextView
                    android:id="@+id/remaining"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/darkgreen"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Items"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#DADADA" />

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/item_placeholder"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:onClick="addLineItem">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No items to show right now.\nClick here to add a line item"
                android:layout_gravity="center"
                android:gravity="center"
            />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/menu"
                android:paddingTop="5dp"
                android:paddingLeft="25dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adjustBudgetButton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="adjustBudget"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Adjust Budget"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_adjust"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Adjust Budget"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/deleteDatabaseButton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="deleteDatabase"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Clear Database"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_delete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Clear Database"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsButton"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="onSettingsClick"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings_alt"
                android:paddingLeft="2dp"
                android:src="@drawable/ic_settings"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/settings_text"
                android:paddingTop="5dp"
                android:paddingLeft="23dp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
